[project]
name = "chirps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.24.1",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "protobuf>=5.29.3",
    "rioxarray>=0.18.2",
    "xarray>=2025.1.2",
]
